# Data-Archiver-with-deduplication-support

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
include/: archive.hpp  archiveTreeEdge.hpp  archiveTreeNode.hpp  file.hpp  fileChunk.hpp  storage.hpp  storageManager.hpp
src/: archive.cpp  file.cpp  fileChunk.cpp  main.cpp  storageManager.cpp
test/: CMakeLists.txt  tests.cpp
test/sample/: text.docx  textFile1.txt
